--- a/style.css
+++ b/style.css
@@ -25,6 +25,20 @@ body {
     width: var(--cell-size);
     height: var(--cell-size);
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+}
+
+.cell.circle,
+.cell.x {
+    cursor: not-allowed;
+}
+
+.board.x .cell:hover {
+
 }
 
 .cell:first-child,.cell:nth-child(2),
@@ -45,9 +59,45 @@ body {
     border-bottom: none;
 }
 
-.cell.x::before,.cell.x::after {
+.cell.x::before,
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
     content: "";   
+    position: absolute;
     width: calc(var(--mark-size) * .15);
     height: var(--mark-size);
     background-color: #000;
+}
+
+
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before {
+    transform: rotate(45deg);
+}
+
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    transform: rotate(-45deg);
+}
+
+.cell.circle::before,
+.cell.circle::after {
+    content: "";   
+    position: absolute;
+    border-radius: 50%;
+    background-color: #000;
+}
+
+
+.cell.circle::before {
+    width: var(--mark-size);
+    height: var(--mark-size);
+    background-color: #000;
+}
+
+.cell.circle::after {
+    width: calc(var(--mark-size)* .7);
+    height: calc(var(--mark-size)* .7);
+    background-color: #fff;
 }
